VOL-2468 internal caseworker screen enable selection of lgv only when applying for standard international goods vehicle licence

--- a/app/selfserve/module/Olcs/view/partials/entity-view/authorisation.phtml
+++ b/app/selfserve/module/Olcs/view/partials/entity-view/authorisation.phtml
@@ -1,3 +1,9 @@
+<?php
+
+if (!empty($this->result['authorisations'])) {
+
+?>
+
 <div class="read-only">
     <div class="read-only__header">
         <h4 class="read-only__title">
@@ -23,3 +29,8 @@
     ?>
 </div>
 
+<?php
+
+}
+
+?>
