VOL-2666:Hide current password on Expired Password when running Cognito

--- a/app/selfserve/module/Olcs/view/pages/auth/expired-password.phtml
+++ b/app/selfserve/module/Olcs/view/pages/auth/expired-password.phtml
@@ -24,8 +24,10 @@
                 <?php
             }
 
-            $oldPassword = $form->get('oldPassword');
-            $oldPassword->setAttribute('class', $oldPassword->getAttribute('class') . ' long');
+            if ($isOpenAM) {
+                $oldPassword = $form->get('oldPassword');
+                $oldPassword->setAttribute('class', $oldPassword->getAttribute('class') . ' long');
+            }
 
             $newPassword = $form->get('newPassword');
             $newPassword->setAttribute('class', $newPassword->getAttribute('class') . ' long');
@@ -35,7 +37,7 @@
 
             echo $this->form()->openTag($form); ?>
                 <fieldset>
-                    <?php echo $this->formRow($form->get('oldPassword')); ?>
+                    <?php if ($isOpenAM) {echo $this->formRow($form->get('oldPassword'));} ?>
                     <?php echo $this->formRow($form->get('newPassword')); ?>
                     <?php echo $this->formRow($form->get('confirmPassword')); ?>
                     <div class="actions-container">
