Revert "Merge branch 'feature/VOL-2666' into 'master'"
This reverts merge request !1215

--- a/app/selfserve/module/Olcs/view/pages/auth/expired-password.phtml
+++ b/app/selfserve/module/Olcs/view/pages/auth/expired-password.phtml
@@ -24,10 +24,8 @@
                 <?php
             }
 
-            if ($isOpenAM) {
-                $oldPassword = $form->get('oldPassword');
-                $oldPassword->setAttribute('class', $oldPassword->getAttribute('class') . ' long');
-            }
+            $oldPassword = $form->get('oldPassword');
+            $oldPassword->setAttribute('class', $oldPassword->getAttribute('class') . ' long');
 
             $newPassword = $form->get('newPassword');
             $newPassword->setAttribute('class', $newPassword->getAttribute('class') . ' long');
@@ -37,7 +35,7 @@
 
             echo $this->form()->openTag($form); ?>
                 <fieldset>
-                    <?php if ($isOpenAM) {echo $this->formRow($form->get('oldPassword'));} ?>
+                    <?php echo $this->formRow($form->get('oldPassword')); ?>
                     <?php echo $this->formRow($form->get('newPassword')); ?>
                     <?php echo $this->formRow($form->get('confirmPassword')); ?>
                     <div class="actions-container">
