--- a/app/internal/module/Olcs/view/pages/auth/login.phtml
+++ b/app/internal/module/Olcs/view/pages/auth/login.phtml
@@ -24,7 +24,12 @@
         ?>
         <?php echo $this->formRow($form->get('username')); ?>
         <?php echo $this->formRow($form->get('password')); ?>
-        <?php echo $this->formElement($form->get('submit')); ?>
+        <div class="govuk-inset-text">
+            <h2><?php echo $this->escapeHtml($this->translate('auth.login.declaration.title')); ?></h2>
+            <?php echo $this->escapeHtml($this->translate('auth.login.declaration.text')); ?>
+        </div>
+        <?php echo $this->formRow($form->get('declarationRead')); ?>
+        <?php echo $this->formRow($form->get('submit')); ?>
     </fieldset>
 
 <?php echo $this->formElement($form->get('security')); ?>
