--- a/app/selfserve/module/Olcs/view/partials/overview_section.phtml
+++ b/app/selfserve/module/Olcs/view/partials/overview_section.phtml
@@ -16,10 +16,10 @@
   </span>
   <?php if ($enabled) : ?>
     <?php if (isset($status) && $status !== ''): ?>
-      <span class="overview__status <?php echo $statusColour; ?>"><?php echo $this->translate($status); ?></span>
+      <strong class="govuk-tag govuk-tag--<?php echo $statusColour; ?>"><?php echo $this->translate($status); ?></strong>
     <?php endif; ?>
   <?php else : ?>
-    <span class="overview__status grey"><?php echo $this->translate('selfserve-app-overview-status-cant-start'); ?></span>
+    <strong class="govuk-tag govuk-tag--grey"><?php echo $this->translate('selfserve-app-overview-status-cant-start'); ?></strong>
   <?php endif; ?>
   <?php if ($enabled) : ?></a><?php else : ?></div><?php endif; ?>
 </li>
