--- a/app/selfserve/module/Olcs/view/layouts/base.phtml
+++ b/app/selfserve/module/Olcs/view/layouts/base.phtml
@@ -81,8 +81,6 @@ $isLoggedIn = $currentUser->isLoggedIn();
   </script>
   <script data-queueit-c='dvsavol' type='text/javascript' src='//static.queue-it.net/script/queueconfigloader.min.js'></script>
 
-  <a href="#main-content" class="govuk-skip-link"><?php echo $this->escapeHtml($this->translate('skip-content')); ?></a>
-
   <?php
   if ($cookieBannerMode != '') {
   ?>
@@ -155,6 +153,8 @@ $isLoggedIn = $currentUser->isLoggedIn();
   <?php
   }
   ?>
+
+  <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link"><?php echo $this->escapeHtml($this->translate('skip-content')); ?></a>
 
   <header class="govuk-header" role="banner" data-module="govuk-header">
     <div class="govuk-header__container govuk-width-container">
