--- a/app/selfserve/module/Olcs/view/partials/guidance-blue-component.phtml
+++ b/app/selfserve/module/Olcs/view/partials/guidance-blue-component.phtml
@@ -1,4 +1,4 @@
-<div class="guidance-blue">
+<div class="govuk-inset-text">
     <?php
         if (!is_array($this->guidance)) {
             echo $this->escapeHtml($this->translate($this->guidance));
