--- a/app/selfserve/module/Olcs/view/pages/fees/home.phtml
+++ b/app/selfserve/module/Olcs/view/pages/fees/home.phtml
@@ -28,7 +28,7 @@ echo $this->render(
       if (!empty($guidanceMessage)) {
           foreach ($guidanceMessage as $message):
     ?>
-      <div class="guidance">
+      <div class="govuk-inset-text">
           <p><?php echo $this->translate($message); ?></p>
       </div>
     <?php
