--- a/app/selfserve/module/Olcs/view/pages/fees/pay-multi.phtml
+++ b/app/selfserve/module/Olcs/view/pages/fees/pay-multi.phtml
@@ -33,7 +33,7 @@ if (isset($payingFromFlow) && $payingFromFlow) {
       if (!empty($guidanceMessage)) {
           foreach ($guidanceMessage as $message):
               ?>
-              <div class="guidance">
+              <div class="govuk-inset-text">
                   <p><?php echo $this->translate($message); ?></p>
               </div>
               <?php
