--- a/app/selfserve/module/Olcs/view/pages/licence-page.phtml
+++ b/app/selfserve/module/Olcs/view/pages/licence-page.phtml
@@ -23,7 +23,7 @@ echo $this->partial(
       if (!empty($guidanceMessage)) {
           foreach ($guidanceMessage as $message):
             ?>
-            <div class="guidance">
+            <div class="govuk-inset-text">
                 <p><?php echo $this->translate($message); ?></p>
             </div>
             <?php
