--- a/app/selfserve/module/Olcs/view/pages/lva-tm-details.phtml
+++ b/app/selfserve/module/Olcs/view/pages/lva-tm-details.phtml
@@ -25,7 +25,7 @@
       if (!empty($guidanceMessage)) {
           foreach ($guidanceMessage as $message):
           ?>
-          <div class="guidance">
+          <div class="govuk-inset-text">
               <p><?php echo $this->translate($message); ?></p>
           </div>
           <?php
