--- a/app/selfserve/module/Olcs/view/pages/my-details-page.phtml
+++ b/app/selfserve/module/Olcs/view/pages/my-details-page.phtml
@@ -13,7 +13,7 @@
 
 <div class="row">
   <div class="two-thirds">
-      <div class="guidance">
+      <div class="govuk-inset-text">
           <p><?php echo $this->translate('name-change.locked.guidance.message'); ?></p>
       </div>
       <p id="top" class="actions-container">
