VOL-3081 migrate from olcs custom guidance style to govuk inset text

--- a/app/internal/module/Admin/view/pages/feature-toggle/index.phtml
+++ b/app/internal/module/Admin/view/pages/feature-toggle/index.phtml
@@ -1,7 +1,7 @@
 <?php
     echo $this->render('pages/table');
 ?>
-<div class="guidance">
+<div class="govuk-inset-text">
     <p>Changing or removing feature toggles can affect the running of the system. This config should only be changed by
         someone with sufficient understanding of the inner workings.</p>
     <p>Most config will involve switching on/off a group of handlers or controllers using a single config key.
