--- a/app/internal/module/Admin/view/pages/system-parameters/system-parameters.phtml
+++ b/app/internal/module/Admin/view/pages/system-parameters/system-parameters.phtml
@@ -1,4 +1,4 @@
-<div class="guidance">
+<div class="govuk-inset-text">
     <p><?php echo $this->translate('internal.admin.system-parameters.change-or-remove'); ?></p>
 </div>
 <?php
