--- a/app/selfserve/module/Olcs/view/pages/application-summary.phtml
+++ b/app/selfserve/module/Olcs/view/pages/application-summary.phtml
@@ -139,14 +139,14 @@
         <h3 class="info-box__heading"><?php echo $this->translate('application.status'); ?></h3>
         <p class="info-box__icon-wrapper"><i class="info-box__icon selfserve-important"></i><?php echo $this->translate($status); ?></p>
 
-          <ul class="info-box__links">
+          <ul class="govuk-list">
           <li>
-              <a href="<?php echo $this->url('lva-' . $lva . '/review', [], [], true); ?>" target="_blank"
+              <a class="govuk-link" href="<?php echo $this->url('lva-' . $lva . '/review', [], [], true); ?>" target="_blank"
                   class=""><?php echo $this->translate('view-full-application') ?></a>
           </li>
             <?php if (isset($canCancel) && $canCancel): ?>
             <li>
-                <a href="<?php echo $this->url('lva-application/cancel', [], [], true); ?>" class="js-modal-ajax">
+                <a href="<?php echo $this->url('lva-application/cancel', [], [], true); ?>" class="govuk-link js-modal-ajax">
                     <?php echo $this->translate('application.cancel'); ?>
                 </a>
             </li>
@@ -154,12 +154,12 @@
             <?php if (isset($canWithdraw) && $canWithdraw): ?>
               <li>
                   <a href="<?php echo $this->url('lva-' . $lva . '/withdraw', [], [], true); ?>"
-                      class="js-modal-ajax"><?php echo $this->translate('withdraw-application') ?></a>
+                      class="govuk-link js-modal-ajax"><?php echo $this->translate('withdraw-application') ?></a>
               </li>
             <?php endif; ?>
             <?php if (isset($paymentRef) && $paymentRef): ?>
               <li>
-                <a target="_blank"
+                <a class="govuk-link" target="_blank"
                 href="<?php echo $this->url('fees/receipt', ['action' => 'print', 'reference' => $paymentRef]);?>"><?php echo $this->translate('pay-fees.success.print-receipt'); ?></a>
               </li>
             <?php endif; ?>
