--- a/app/internal/module/Olcs/view/sections/bus/partials/right.phtml
+++ b/app/internal/module/Olcs/view/sections/bus/partials/right.phtml
@@ -5,16 +5,25 @@
 <div class="small-module">
     <h4 class="title">Operator details</h4>
     <p class="small-module__details">
-        <a href="<?php echo $this->url('operator/business-details', ['organisation' => $busReg['licence']['organisation']['id']], [], true);?>">
-            <?php echo $this->escapeHtml($busReg['licence']['organisation']['name']); ?>
-        </a>
+        <?php
+        echo $this->link(
+            $this->url('operator/business-details', ['organisation' => $busReg['licence']['organisation']['id']], [], true),
+            $busReg['licence']['organisation']['name']
+        );
+        ?>
     </p>
 </div>
 
 <div class="small-module">
     <h4 class="title">Licence details</h4>
     <p class="small-module__details">
-        <a href="<?php echo $this->url('lva-licence', ['licence' => $busReg['licence']['id']], [], false); ?>"><?php echo $this->escapeHtml($busReg['licence']['licNo']); ?></a><br>
+        <?php
+        echo $this->link(
+            $this->url('lva-licence', ['licence' => $busReg['licence']['id']], [], false),
+            $busReg['licence']['licNo']
+        );
+        ?>
+        <br/>
         <?php echo $this->translate($busReg['licence']['licenceType']['id']); ?><br/>
         <?php echo $this->translate($busReg['licence']['status']['id']); ?>
     </p>
@@ -67,15 +76,18 @@ $nav = $this->navigation('right-sidebar')
 <?php if (!empty($note) && !$this->isGranted(Common\RefData::PERMISSION_INTERNAL_LIMITED_READ_ONLY)):?>
     <div class="latest-note">
         <div class="latest-note__details"><?php echo $this->escapeHtml(substr($note, 0, 100)); ?></div>
-        <a
-            class="latest-note__link"
-            href="<?php echo $this->url(
-                'licence/bus-processing/notes',
-                [
-                    'licence' => $busReg['licence']['id'],
-                    'busRegId' => $busReg['id']
-                ]
-            ); ?>"
-        >View all notes</a>
+        <?php
+            echo $this->link(
+                $this->url(
+                    'licence/bus-processing/notes',
+                    [
+                        'licence' => $busReg['licence']['id'],
+                        'busRegId' => $busReg['id']
+                    ]
+                ),
+                'View all notes',
+                'latest-note__link'
+            )
+        ?>
     </div>
 <?php endif; ?>
