--- a/app/internal/module/Olcs/view/error/dev-404.phtml
+++ b/app/internal/module/Olcs/view/error/dev-404.phtml
@@ -10,7 +10,7 @@ $this->placeholder('pageTitle')->set('404-title');
 <div class="article">
     <?php echo $this->translate('markup-404-text'); ?>
     <hr>
-    <p><a href="<?php echo $this->url('dashboard'); ?>"><?php echo $this->translate('back-to-home'); ?></a></p>
+    <p><?php echo $this->link($this->url('dashboard'), 'back-to-home'); ?></p>
 
     <?php echo $this->partial('partials/error/notfound'); ?>
     <?php echo $this->partial('partials/error/exception'); ?>
