--- a/app/internal/module/Olcs/view/marker/case-appeal.phtml
+++ b/app/internal/module/Olcs/view/marker/case-appeal.phtml
@@ -1,8 +1,11 @@
 <p class="notice--warning">
     <?php if (!$this->hideCaseLink): ?>
-    <a href="<?php echo $this->url('case_hearing_appeal', ['case' => $this->caseId]) ?>">
-        <?php echo $this->translate('Case') .' '. (int) $this->caseId ?>
-    </a>
+    <?php
+        echo $this->link(
+            $this->url('case_hearing_appeal', ['case' => $this->caseId]),
+            $this->translate('Case') .' '. (int) $this->caseId
+        );
+    ?>
     <br>
     <?php endif; ?>
     <strong>
