--- a/app/internal/module/Olcs/view/marker/licence-status-rule.phtml
+++ b/app/internal/module/Olcs/view/marker/licence-status-rule.phtml
@@ -18,8 +18,10 @@
         \Common\RefData::LICENCE_STATUS_SUSPENDED => 'suspend-licence'
     ];
     $route = 'licence/' . $routes[$this->status['id']];
+
+    echo $this->linkModal(
+        $this->url($route, ['licence' => $this->licenceId, 'status' => $this->ruleId]),
+        'Update details'
+    );
     ?>
-    <a href="<?php echo $this->url($route, ['licence' => $this->licenceId, 'status' => $this->ruleId]) ?>" class="js-modal-ajax">
-        <?php echo $this->translate('Update details') ?>
-    </a>
 </p>
