--- a/app/internal/module/Olcs/view/marker/soletrader-disqualification.phtml
+++ b/app/internal/module/Olcs/view/marker/soletrader-disqualification.phtml
@@ -12,7 +12,10 @@
     }
     ?>
     <br>
-    <a href="<?php echo $this->url('operator/disqualify_person', ['person' => (int) $this->personId, 'organisation' => (int) $this->organisationId]) ?>" class="js-modal-ajax">
-        <?php echo $this->translate('Edit disqualification') ?>
-    </a>
+    <?php
+        echo $this->linkModal(
+            $this->url('operator/disqualify_person', ['person' => (int) $this->personId, 'organisation' => (int) $this->organisationId]),
+            'Edit disqualification'
+        );
+    ?>
 </p>
