--- a/app/internal/module/Olcs/view/pages/auth/login.phtml
+++ b/app/internal/module/Olcs/view/pages/auth/login.phtml
@@ -15,7 +15,7 @@
 
         $form->get('password')->setOption(
             'hint',
-            sprintf('<a tabindex="4" href="%s">%s</a>',
+            sprintf('<a tabindex="4" class="govuk-link" href="%s">%s</a>',
                 $this->url('auth/forgot-password'),
                 $this->translate('auth.forgot-password.label')
             )
