--- a/app/internal/module/Olcs/view/sections/irhp-application/partials/right.phtml
+++ b/app/internal/module/Olcs/view/sections/irhp-application/partials/right.phtml
@@ -6,16 +6,25 @@ $isPriorityNote = $this->placeholder('isPriorityNote')->getValue();
 <div class="small-module">
     <h4 class="title"><?php echo $this->translate('entity-details-nav-operator-details'); ?></h4>
     <p class="small-module__details">
-        <a href="<?php echo $this->url('operator/business-details', ['organisation' => $irhpPermit['licence']['organisation']['id']], [], true);?>">
-            <?php echo $this->escapeHtml($irhpPermit['licence']['organisation']['name']); ?>
-        </a>
+        <?php
+            echo $this->link(
+                $this->url('operator/business-details', ['organisation' => $irhpPermit['licence']['organisation']['id']], [], true),
+                $irhpPermit['licence']['organisation']['name']
+            );
+        ?>
     </p>
 </div>
 
 <div class="small-module">
     <h4 class="title"><?php $this->translate('entity-details-nav-licence-details'); ?></h4>
     <p class="small-module__details">
-        <a href="<?php echo $this->url('lva-licence', ['licence' => $irhpPermit['licence']['id']], [], false); ?>"><?php echo $this->escapeHtml($irhpPermit['licence']['licNo']); ?></a><br>
+        <?php
+            echo $this->link(
+                $this->url('lva-licence', ['licence' => $irhpPermit['licence']['id']], [], false),
+                $irhpPermit['licence']['licNo']
+            );
+        ?>
+        <br>
         <?php echo $this->escapeHtml($this->translate($irhpPermit['licence']['licenceType']['id'])); ?><br/>
         <?php echo $this->escapeHtml($this->translate($irhpPermit['licence']['status']['id'])); ?>
     </p>
@@ -61,6 +70,15 @@ $nav = $this->navigation('right-sidebar')
         <div class="latest-note__<?php echo ($isPriorityNote ? "priority" : "details"); ?>">
             <?php echo $this->escapeHtml(substr($note, 0, 100)); ?>
         </div>
-        <a class="latest-note__link" href="<?php echo $this->url('licence/irhp-application-processing/notes', ['licence' => $irhpPermit['licence']['id'], 'irhpAppId' => $irhpPermit['id']]); ?>">View all notes</a>
+        <?php
+            echo $this->link(
+                $this->url(
+                    'licence/irhp-application-processing/notes',
+                    ['licence' => $irhpPermit['licence']['id'], 'irhpAppId' => $irhpPermit['id']]
+                ),
+                'View all notes',
+                'latest-note__link'
+            );
+        ?>
     </div>
 <?php endif; ?>
