--- a/app/internal/module/Olcs/view/sections/variation/partials/left.phtml
+++ b/app/internal/module/Olcs/view/sections/variation/partials/left.phtml
@@ -4,7 +4,7 @@
         <?php $current = ($details['route'] === $currentRoute); ?>
         <li class="app-navigation__item <?php echo $details['class']; ?> <?php echo $current ? 'current' : ''; ?>">
             <?php if (!$current) : ?>
-            <a href="<?php echo $this->url($details['route'], ['application' => $lvaId]); ?>">
+            <a class="govuk-link" href="<?php echo $this->url($details['route'], ['application' => $lvaId]); ?>">
                 <?php endif; ?>
                 <?php
                     $sectionName = $reference;
